# swagger/swagger_output.json
@@ -12,16 +12,6 @@
     }
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "401": {
-            "description": "Não autorizado"
-          }
-        }
-      }
-    },
     "/adm": {
       "get": {
         "tags": [
@@ -166,9 +156,6 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "500": {
             "description": "Erro Interno do Servidor"
           }
@@ -183,8 +170,25 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Solicitação Inválida"
+          },
           "500": {
             "description": "Erro Interno do Servidor"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "req": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -207,9 +211,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Não autorizado"
           },
           "404": {
             "description": "Não Encontrado"
@@ -243,9 +244,6 @@
           "400": {
             "description": "Solicitação Inválida"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "404": {
             "description": "Não Encontrado"
           },
@@ -275,9 +273,6 @@
           },
           "400": {
             "description": "Solicitação Inválida"
-          },
-          "401": {
-            "description": "Não autorizado"
           },
           "404": {
             "description": "Não Encontrado"
@@ -309,9 +304,6 @@
           "400": {
             "description": "Solicitação Inválida"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "404": {
             "description": "Não Encontrado"
           },
@@ -331,9 +323,6 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "500": {
             "description": "Erro Interno do Servidor"
           }
@@ -348,8 +337,25 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Solicitação Inválida"
+          },
           "500": {
             "description": "Erro Interno do Servidor"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "req": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -372,9 +378,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Não autorizado"
           },
           "404": {
             "description": "Não Encontrado"
@@ -408,9 +411,6 @@
           "400": {
             "description": "Solicitação Inválida"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "404": {
             "description": "Não Encontrado"
           },
@@ -441,9 +441,6 @@
           "400": {
             "description": "Solicitação Inválida"
           },
-          "401": {
-            "description": "Não autorizado"
-          },
           "404": {
             "description": "Não Encontrado"
           },
@@ -473,9 +470,6 @@
           },
           "400": {
             "description": "Solicitação Inválida"
-          },
-          "401": {
-            "description": "Não autorizado"
           },
           "404": {
             "description": "Não Encontrado"
@@ -1023,7 +1017,6 @@
               "email",
               "phone",
               "typeOfWork",
-              "dateOfService",
               "howFindCompany",
               "dataProtection",
               "consentDate"
@@ -1062,64 +1055,6 @@
                   }
                 }
               },
-              "address": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "string",
-                    "example": "object"
-                  },
-                  "properties": {
-                    "type": "object",
-                    "properties": {
-                      "city": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "required": {
-                            "type": "boolean",
-                            "example": false
-                          }
-                        }
-                      },
-                      "street": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "required": {
-                            "type": "boolean",
-                            "example": false
-                          }
-                        }
-                      },
-                      "district": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          }
-                        }
-                      },
-                      "houseNumber": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
               "eircode": {
                 "type": "object",
                 "properties": {
@@ -1142,25 +1077,13 @@
                       "serviço de limpeza",
                       "paisagismo e jardinagem",
                       "pintura",
+                      "reformas",
                       "manicure e pedicure",
                       "costura"
                     ],
                     "items": {
                       "type": "string"
                     }
-                  }
-                }
-              },
-              "dateOfService": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "string",
-                    "example": "string"
-                  },
-                  "format": {
-                    "type": "string",
-                    "example": "date-time"
                   }
                 }
               },
@@ -1208,17 +1131,7 @@
                 "properties": {
                   "type": {
                     "type": "string",
-                    "example": "string"
-                  },
-                  "enum": {
-                    "type": "array",
-                    "example": [
-                      "sim",
-                      "não"
-                    ],
-                    "items": {
-                      "type": "string"
-                    }
+                    "example": "boolean"
                   }
                 }
               },
@@ -1327,64 +1240,6 @@
                   }
                 }
               },
-              "address": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "string",
-                    "example": "object"
-                  },
-                  "properties": {
-                    "type": "object",
-                    "properties": {
-                      "city": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "required": {
-                            "type": "boolean",
-                            "example": false
-                          }
-                        }
-                      },
-                      "street": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "required": {
-                            "type": "boolean",
-                            "example": false
-                          }
-                        }
-                      },
-                      "district": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          }
-                        }
-                      },
-                      "houseNumber": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
               "eircode": {
                 "type": "object",
                 "properties": {
@@ -1407,6 +1262,7 @@
                       "serviço de limpeza",
                       "paisagismo e jardinagem",
                       "pintura",
+                      "reformas",
                       "manicure e pedicure",
                       "costura"
                     ],
@@ -1461,17 +1317,7 @@
                 "properties": {
                   "type": {
                     "type": "string",
-                    "example": "string"
-                  },
-                  "enum": {
-                    "type": "array",
-                    "example": [
-                      "sim",
-                      "não"
-                    ],
-                    "items": {
-                      "type": "string"
-                    }
+                    "example": "boolean"
                   }
                 }
               },
